# rates

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.debug.yml  docker-compose.testing.yml  docker-compose.yml  env.development.sample  env.testing.sample  pyproject.toml
containers/: Dockerfile  Dockerfile.production  Dockerfile.testing
containers/initdb.d/: 00_migrations.sql
containers/initdb_testing.d/: 00_migrations.sql  10_rates.sql
containers/scripts/: start-app-debug.sh  start-app-dev.sh  start-app-test.sh
migrations/: env.py
migrations/versions/: 17bea0775784_initial_revision.py
rates/: __main__.py  config.py  database.py  main.py  queries.py  schemas.py  utils.py
requirements/: base.txt  dev.txt  migrations.txt  prod.txt  test.txt
tests/: conftest.py  test_rates.py  test_startapp.py
