[tool.poetry]
name = "rates"
version = "0.1.0"
description = ""
authors = ["Gledi Caushaj <gledi.alb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
databases = {version = "^0.6.1", extras = ["asyncpg"]}

[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[tool.poetry.group.migrations.dependencies]
alembic = "^1.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
